# forge

./: .gitignore  c.txt  cookies.txt  demo.txt  demo_prod.txt  drizzle.config.js  gen-tenant-key.mjs  package-lock.json  package.json  test.txt  verify3.mjs
.github/workflows/: ci.yml  deploy.yml
drizzle/: 0000_tricky_newton_destine.sql  0001_medical_kingpin.sql  0002_amused_stranger.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  _journal.json
native/: Cargo.toml  THRESHOLD_DESIGN.md  index.d.ts  index.js  package-lock.json  package.json  verify.mjs  verify2.mjs
native/src/: lib.rs
src/: app.js  index.js
src/config/: env.js
src/db/: Client.js  schema.js
src/events/: publisher.js  subscriber.js
src/modules/analysis/: analysis.controller.js  analysis.routes.js  analysis.service.js  componentRegistry.js  escalationRouter.js  graphReader.js  graphReader.test.js  graphWriter.js  graphWriter.test.js  logFusion.js  runbookScorer.js
src/modules/auth/: auth.controller.js  auth.routes.js  auth.service.js
src/modules/encryptedEvidence/: encryptedEvidence.routes.js
src/modules/evidence/: evidence.repository.js  evidence.service.js
src/modules/graph/: graph.controller.js  graph.routes.js
src/modules/incidents/: evidence.controller.js  incident.controller.js  incident.routes.js  incident.service.js
src/modules/notifications/: slackDispacther.js  (+1 more)
src/plugins/: db.js
src/queues/: analysis.queue.js  fheEvidence.queue.js
src/routes/: health.js
src/workers/: analysis.worker.js  fheCryptoWorker.js  fheEvidence.worker.js
(+8 files in other folders)
